fix horizontal scroll in mobile version, cener img in card and fix add padding bottom

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -6,7 +6,7 @@
   &--box{
     display: flex;
     justify-content: space-between;
-
+    padding-left: 1em;
   }
   &--icons{
     display: flex;
