--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -129,6 +129,7 @@
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
+  padding-bottom: 1em ;
 
   @media all and (min-width: 768px) {
     display: grid;
@@ -161,6 +162,7 @@
 .card__content > figure {
   display: flex;
   order:1;
+  place-self: center;
   @media all and (min-width: 768px) {
     grid-area: img;
     overflow: hidden;
