--- a/src/scss/pages/_index.scss
+++ b/src/scss/pages/_index.scss
@@ -9,7 +9,7 @@ body {
 
 .wrapper{
   max-width: 1000px;
-  min-width: 400px;
+  min-width: 350px;
   margin: 0 auto;
 }
 
